--- a/style.css
+++ b/style.css
@@ -4,24 +4,35 @@
 }
 
 header {
-  width: 90%;
   margin: 0 auto;
+  font-weight: bold;
+  text-align: center;
 }
 
 h1 {
   background-color: #0F0F0F;
   color: #FFFFFF;
-  text-align: center;
   padding: 30px 0;
 }
 
-nav {
+/*nav {
   text-align: center;
-}
+}*/
 
 nav a {
   text-decoration: none;
-  background-color: #F2F2F2;
+  background-color: #EBEBEB;
   color: white;
   padding: 20px 10px;
+}
+
+main {
+  width: 95%;
+  margin: 4px auto;
+}
+
+.gallery-head {
+  background-color: green;
+  padding-left: 10px;
+  line-height: 50px;
 }
