--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ h1 {
   padding: 30px 0;
 }
 
+nav {
+  height: 30px;
+}
+
 nav a {
   text-decoration: none;
   background-color: #BBBBBB;
@@ -24,9 +28,9 @@ nav a {
 }
 
 main {
-  border-top: 8px solid white;
+  /*border-top: 8px solid white;*/
   width: 910px;
-  margin: 4px auto;
+  margin: 0 auto;
   /*max-width: 1800px;*/
 }
 
@@ -38,6 +42,13 @@ main {
 
 h2 {
   font-weight: normal;
+}
+
+h2 a {
+  text-decoration: none;
+  color: black;
+  border-bottom: 3px solid yellow;
+  font-weight: bold;
 }
 
 .layout {
